# serve-engine

./: .gitignore  LICENSE  README.md  pyproject.toml
docker/: README.md  daemon.Dockerfile
docs/: predictor.md
docs/bench/: 2026-05-11-bench-v2-qwen.json
examples/: README.md
scripts/: bench.py  bench_snapshots.py  install.sh  smoke_e2e.sh  smoke_p03_engines.sh  smoke_p04_auth.sh
src/serve_engine/: config.py
tests/integration/: test_adapter_lifecycle.py  test_openai_proxy.py  test_openai_proxy_http.py
tests/unit/: test_adapter_downloader.py  test_adapter_router.py  test_adapter_store.py  test_admin_adapter_endpoints.py  test_admin_endpoints.py  test_admin_events_endpoint.py  test_api_keys_store.py  test_auth_middleware.py  test_bench_snapshots.py  test_cli_ipc.py  test_deployment_adapters_store.py  test_deployment_plans_store.py  test_docker_client.py  test_doctor.py  test_downloader.py  test_events.py  test_gpu_stats.py  test_health_monitor.py  test_hub.py  test_image_digest.py  test_key_usage_store.py  test_kv_estimator.py  test_lifecycle_manager.py  test_limiter.py  test_manifest.py  test_manifest_override.py  test_metrics.py  test_placement.py  test_plan.py  test_predictor.py  test_predictor_task.py  test_proxy_adapter_dispatch.py  test_proxy_key_allowlist.py  test_reaper.py  test_replay.py  test_selection.py  test_service_profiles_store.py  test_service_routes_store.py  test_sglang_backend.py  test_smoke.py  (+10 more)
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  api.ts  main.tsx  styles.css
(+171 files in other folders)
