[project]
name = "serve-engine"
version = "0.0.1"
description = "Single-node multi-user inference orchestrator over vLLM and SGLang"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "typer>=0.12",
    "docker>=7.1",
    "huggingface_hub>=0.24",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "nvidia-ml-py>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "anyio>=4.4",
]

[project.scripts]
serve = "serve_engine.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/serve_engine"]

[tool.hatch.build.targets.wheel.force-include]
"src/serve_engine/store/migrations" = "serve_engine/store/migrations"
"src/serve_engine/backends/backends.yaml" = "serve_engine/backends/backends.yaml"
"src/serve_engine/backends/selection.yaml" = "serve_engine/backends/selection.yaml"
"src/serve_engine/auth/tiers.yaml" = "serve_engine/auth/tiers.yaml"
"src/serve_engine/ui" = "serve_engine/ui"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
